--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ seaborn==0.10.0
 matplotlib==3.1.3
 xlrd==1.2.0
 altair==4.1.0
+spacy==2.3.5
+wordcloud==1.8.1
+pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-2.3.0/pt_core_news_sm-2.3.0.tar.gz
