--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ altair==4.1.0
 spacy==2.3.5
 wordcloud==1.8.1
 pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-2.3.0/pt_core_news_sm-2.3.0.tar.gz
+yfinance==0.1.54
