--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit==0.75.0
+streamlit==0.82.0
 pandas==1.0.1
 seaborn==0.10.0
 matplotlib==3.1.3
 xlrd==1.2.0
 altair==4.1.0
-spacy==2.3.5
 wordcloud==1.8.1
-pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-2.3.0/pt_core_news_sm-2.3.0.tar.gz
-yfinance==0.1.54
 numpy==1.18.1
+nltk==3.6.1
+joblib==1.0.1
